--- a/wwwroot/css/navbar.css
+++ b/wwwroot/css/navbar.css
@@ -599,7 +599,7 @@ header.scrolled .logo-container img {
     }
 
     .user-name {
-        display: none;
+        max-width: none;
     }
 
     .main-nav-links .nav-link {
