--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,18 +18,20 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
 
 body {
-  margin-bottom: 230px;
   font-family: 'Roboto', Calibri, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #333;
   background-color: #ffffff;
   font-weight: 400;
   line-height: 1.6;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+body > main {
+  flex: 1 0 auto;
 }
 
 /* Typography weight classes following UN-Habitat guidelines */
@@ -60,8 +62,6 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #ffffff;
   border-top: 1px solid #e5e5e5;
   padding: 1.5rem 0;
-  position: absolute;
-  bottom: 0;
   width: 100%;
 }
 
